app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

@import "bootstrap-sprockets";
@import "bootstrap";


/* Navigation */ 
.nav-container {
  border-bottom: 1px;
  border-style: none none solid;
  background-color: #2B75ED;
  margin-bottom: 20px;
}

.nav {
  padding-top: 10px;
  float: right;
  margin-bottom: 15px;
  margin-right: 10px;
}

/* Business Forms */

.links {
  margin-bottom: 8px;
  margin-top: 8px;
}

/* Index page */ 

.bold-text {
  display: inline-block;
}

.btn-xlarge {
  font-size: 28px;
}

.centered {
  text-align: center;
}

.glyphicon-plus {
  font-size: 48px;
}

.glyphicon-search {
  font-size: 48px;
}

.button-container {
  position: fixed;
  left: 50%;
  top: 50%;
  z-index: 100;

  height: 400px;
  margin-top: -200px;

  width: 600px;
  margin-left: -300px;
}

.find-happy-hour-div {
  margin-top: 100px;
}

.add-happy-hour-div {
  margin-top: 100px;
}

/* Business Index Page */
.business-container {
  margin-top: 15px;
}

/* Business Show Page */
.heading-center {
  text-align: center;
}

.green-text {
  color: green;
}

.red-text {
  color: red;
}

/* User sign in and sign forms. */
.border-form-div {
  max-width: 300px;
  padding: 19px 29px 29px;
  margin: 0 auto 20px;
  background-color: #fff;
  border: 1px solid #e5e5e5;
  -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
          border-radius: 5px;
  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
     -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
          box-shadow: 0 1px 2px rgba(0,0,0,.05);
}
.border-form-div .form-signin-heading,
.border-form-div .checkbox {
  margin-bottom: 10px;
}
.border-form-div input[type="text"],
.border-form-div input[type="email"],
.border-form-div input[type="password"] {
  font-size: 16px;
  height: auto;
  margin-bottom: 15px;
  padding: 7px 9px;
}

/* Glyphicons on index page */
@media (max-width: 1200px) {
  .glyphicon {
  display: block;
  margin-bottom: 10px;
  }
}

/* Spacing on show page */
@media (max-width: 500px) {
  .small-screen-margin {
  margin-top: 10px;
  }
  
}

